# susu

./: .gitignore  README.md
docs/: browser_extension_solutions.md  desktop_app_solutions.md  pwa_other_solutions.md  research_plan_browser_extension_solutions.md  research_plan_pwa.md  research_plan_web_app_limitations.md  web_app_limitations.md
time-assistant-desktop/: ACTUAL_STATUS.md  AUTO_BUILD_SCRIPT.md  BUILD_FIRST.md  DEPLOYMENT.md  DEVELOPMENT.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START_GUIDE.md  README.md  START_HERE.md  TESTING_CHECKLIST.md  TROUBLESHOOTING.md  USER_GUIDE.md  convert-icon.cjs  index.html  package-lock.json  package.json  tailwind.config.js  ✅使用说明已完成.md  ✅新功能完成说明.md  ✅问题已解决.md  ✅项目交付总结.txt  ✨紧凑模式功能说明.md  一键安装环境.ps1  启动应用.ps1  当前状态报告.md  快速开始.md  永久修复PATH.ps1  环境配置指南.md  生成图标.ps1  简易安装步骤.md  🎉安装成功.md  🎉超紧凑模式使用指南.md  🎊所有问题已修复.md  🎨超紧凑模式说明.md  🎯参数命名修复完成.md  🎯图标问题完整解决方案.md  🎯最终修复完成.md  🎯最终解决方案.md  (+11 more)
time-assistant-desktop/src/: App.tsx  index.css
time-assistant-desktop/src-tauri/: Cargo.toml  tauri.conf.json
time-assistant-desktop/src-tauri/icons/: ICON_STATUS.md  README.md
time-assistant-desktop/src-tauri/src/: commands.rs  database.rs  main.rs
time-assistant-desktop/src/components/: AddPlanDialog.tsx  PlanCard.tsx  PlanDetailDialog.tsx  ReflectionDialog.tsx  SettingsPanel.tsx
time-assistant-desktop/src/hooks/: usePlans.ts  useTheme.ts  useTimer.ts
time-assistant-desktop/src/types/: index.ts
time-assistant-desktop/src/utils/: api.ts  format.ts
time-assistant/src/: App.css  App.tsx
