[package]
name = "time-assistant"
version = "1.0.0"
description = "一个功能强大的桌面时间管理助手"
authors = ["MiniMax Agent"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-write-file", "dialog-all", "notification-all", "path-all", "fs-exists", "fs-copy-file", "fs-create-dir", "shell-open", "fs-read-file", "window-all", "global-shortcut-all", "fs-rename-file", "fs-remove-dir", "fs-remove-file", "fs-read-dir", "system-tray", "icon-png", "icon-ico"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
auto-launch = "0.5"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
